manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: Oracle TEST
    openshift.io/display-name: Oracle TEST
  name: oracle-test
