manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oracle19c
  name: oracle19c
spec:
  ports:
  - name: 1521-tcp
    port: 1521
    protocol: TCP
    targetPort: 1521
  - name: 5500-tcp
    port: 5500
    protocol: TCP
    targetPort: 5500
  selector:
    deploymentconfig: oracle19c
  sessionAffinity: None
  type: ClusterIP
